--- a/rechargeRecord.html
+++ b/rechargeRecord.html
@@ -66,9 +66,13 @@
 					  							
 					  							<div class="ui-button-group-h">
 					  								<div class="ui-input">
-					  									<div class="ui-input-content"><input id="date-picker" type="text" value="" placeholder="yyyy/mm/dd" /></div>
+					  									<div class="ui-input-content"><input id="date-picker1" type="text" value="" placeholder="开始时间" /></div>
 					  									<div class="ui-input-icon ui-icon-calendar"></div>
 					  								</div>
+													<div class="ui-input">
+														<div class="ui-input-content"><input id="date-picker2" type="text" value="" placeholder="结束时间" /></div>
+														<div class="ui-input-icon ui-icon-calendar"></div>
+													</div>
 					  								<input type="button" class="ui-button-red gold" value="搜索" />
 					  							</div>
 					  						</div>
