--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                                       	描述：倒计时面板
                                       -->
   									<div class="ui-panel ui-panel-timedown">
-  										<div class="ui-panel-title">第<b> 119</b> 期  开奖倒计时:</div>
-  										<div class="ui-panel-content">00:00:00</div>
+  										<div class="ui-panel-title">第<b id="NextRaceNumber"> 119</b> 期  开奖倒计时:</div>
+  										<div class="ui-panel-content" id="NextRaceTimedown">00:00:00</div>
   									</div>
   									<!--
                                       	作者：225733202@qq.com
